# bevytest

./: Cargo.toml  README.md
docs/: netcode.md
src/: game_states.rs  main.rs  statics.rs
src/atlas/: assets_atlas_animation_from_to.rs  atlas_sprite_details.rs  mod.rs
src/bundles/: action_bundle.rs  animation_bundle.rs  enemy_bundle.rs  mod.rs  player_bundle.rs  playerbundle.rs
src/components/: animation_frames.rs  animation_timer.rs  damage.rs  health.rs  markers.rs  mod.rs  movement.rs  name.rs
src/config/: action_config.rs  enemy_configs.rs  mod.rs  player_config.rs
src/events/: mod.rs  player_action_event.rs
src/helper/: animation.rs  mod.rs  sprite_helper.rs
src/models/: animation_config.rs  mod.rs  pixel_dimension.rs
src/plugins/: hello_plugin.rs  mod.rs
src/system/: anim_sprites.rs  enemy_spawner.rs  keyboard_input.rs  mod.rs  movement.rs
src/system_startup/: create_background.rs  create_player.rs  mod.rs
src/ui/loading/: mod.rs  ui_loading.rs
tools/atlasprocessing/: main.py
